--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 </style>
 
 <body style="">
-    <a href="https://twitter.com/_R0NNI" style="width: 100%;text-decoration: auto;text-align: center;color: antiquewhite; white-space: pre-wrap;">Created by RONI            Twitter @_R0NNI</a>
+    <a href="https://twitter.com/_R0NNI" style="width: 100%;text-decoration: auto;text-align: center;color: antiquewhite; white-space: pre-wrap;margin-bottom: 20px;">Created by RONI            Twitter @_R0NNI</a>
     <div id="capture" style="width: 650px;height: 1000px;background-color: #292623;
-    border-width: 1.5px;    border-style: solid;  margin-top: 20px; box-sizing: ; ">
+    border-width: 1.5px;    border-style: solid;   box-sizing: ; ">
         <input type="text"
             style="text-align: center;font-size: 50px;margin: 20px 0px 20px 0px;width: 100%;display: inline-block;"
             value="繪師進化錄 2022"> </input>
