--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 <meta charset="utf-8">
+<title> 繪師進化錄產生器 by RONI</title>
+<meta name="description" content="繪師進化錄產生器，歡迎使用。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼。 本網頁不抓取任何資料，不定時更新。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼">
+<!-- Google / Search Engine Tags -->
+<meta itemprop="name" content="繪師進化錄產生器 by RONI">
+<meta itemprop="description" content="繪師進化錄產生器，歡迎使用。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼。 本網頁不抓取任何資料，不定時更新。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://ronniechoyy.github.io/artist_evolution_generator/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="繪師進化錄產生器 by RONI">
+<meta property="og:description" content="繪師進化錄產生器，歡迎使用。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼。 本網頁不抓取任何資料，不定時更新。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼。 本網頁不抓取任何資料，不定時更新">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="繪師進化錄產生器 by RONI">
+<meta name="twitter:description" content="繪師進化錄產生器，歡迎使用。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼。 本網頁不抓取任何資料，不定時更新。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼">
+
 <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"
@@ -10,16 +27,17 @@
     crossorigin="anonymous"></script>
 
 
-<title> 繪師進化錄產生器 2022 </title>
+
 
 <style>
     body {
         color: rgb(255, 239, 208);
         font-family: 'Yuji Mai', sans-serif;
-        background-color: #292623;
-        justify-content: space-evenly;
+        background-color: #292623;        
         display: flex;
         flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
     }
 
     .imgbox {
@@ -87,7 +105,7 @@
         <input type="text" id="artistname"
             style="text-align: center;font-size: 25px;margin: -30px 0px 0px 0px;width: 100%;display: inline-block;"
             value="請在這裡輸入畫師自己的名字 eg.RONI"> </input>
-        <div style="display: grid;grid-template-columns: auto auto auto auto;grid-template-rows: 270px 270px 270px;column-gap: 10px;row-gap: 10px;height: 82%;margin: 20px;"
+        <div style="display: grid;grid-template-columns: auto auto auto auto;grid-template-rows: auto;column-gap: 10px;row-gap: 10px;height: calc(100% - 175px);;margin: 20px;"
             id="boxx">
 
         </div>
