--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 <meta name="twitter:title" content="繪師進化錄產生器 by RONI">
 <meta name="twitter:description" content="繪師進化錄產生器，歡迎使用。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼。 本網頁不抓取任何資料，不定時更新。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TMTDDPGL88"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TMTDDPGL88');
+</script>
+
 <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"
