--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     .addbox {
         background-color: #000000;
         width: 100%;
-        height: 245;
+        height: calc(100% - 30px);
         position: relative;
         margin-top: -270;
         border-radius: 10px;
@@ -114,8 +114,8 @@
             value="繪師進化錄 2022"> </input>
         <input type="text" id="artistname"
             style="text-align: center;font-size: 25px;margin: -30px 0px 0px 0px;width: 100%;display: inline-block;"
-            value="請在這裡輸入畫師自己的名字 eg.RONI"> </input>
-        <div style="display: grid;grid-template-columns: auto auto auto auto;grid-template-rows: auto;column-gap: 10px;row-gap: 10px;height: calc(100% - 175px);;margin: 20px;"
+            value="》》請在這裡輸入畫師自己的名字 eg.RONI《《"> </input>
+        <div style="display: grid;grid-template-columns: auto auto auto auto;grid-template-rows: 33% 33% 33%; ;column-gap: 10px;row-gap: 10px;height: calc(100% - 175px);;margin: 20px;"
             id="boxx">
 
         </div>
