--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<head>
 <meta charset="utf-8">
 <title> 繪師進化錄產生器 by RONI</title>
 <meta name="google-site-verification" content="4KpHu0apNT0vDVjwgVuUmzz7tzxHGznTatrkphFa56g" />
@@ -23,7 +24,7 @@
 <meta name="twitter:title" content="繪師進化錄產生器 by RONI">
 <meta name="twitter:description"
     content="繪師進化錄產生器，歡迎使用。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼。 本網頁不抓取任何資料，不定時更新。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼。 作為畫師的自己想到每次都要折騰一番，倒不如自己造一個產生器順便練習寫代碼">
-
+</head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TMTDDPGL88"></script>
 <script>
