--- a/index.html
+++ b/index.html
@@ -1575,6 +1575,11 @@
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
+    var disqus_config = function () {
+        this.page.url = 'https://ronniechoyy.github.io/artist_evolution_generator/';
+        //this.page.identifier = 'a unique identifier for each page where Disqus is present';
+        //this.page.title = 'a unique title for each page where Disqus is present';
+    };
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
     s.src = 'https://artist-evolution-generator.disqus.com/embed.js';
