--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
         class="nf">
         <div id="discuss_in"
             style="position: absolute;width: 550px;height: 800;top: 0;z-index: 1000;margin: 100px;border-radius:10px;padding: 20px;display: grid;grid-template-columns: auto ;grid-template-rows: 1fr ; gap: 5px;">
-            <div class="ipb" style="background-color: #292623; padding: 30px;">
+            <div class="ipb" style="background-color: rgb(241, 241, 241);padding: 30px;color: rgb(31, 31, 31);height: 700px;overflow-y: scroll;">
                 <div id="disqus_thread"></div>
             </div>
 
